# vitaledge-crypt

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
docs/: design.md  dev-guide-phase-1.md  dev-guide-phase-2.md  shared-libs.md  software-spec.md  vision.md
shared/: CMakeLists.txt  VitalEdgeCrypto.cpp  VitalEdgeCrypto.h  VitalEdgeKeyManager.cpp  VitalEdgeKeyManager.h  VitalEdgeUtils.cpp  VitalEdgeUtils.h
src/: main.cpp
tests/: test_vitaledge_crypto.cpp
